# meeting_mind

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/api/: routes.py
backend/app/db/: database.py
backend/app/services/: asr_candidates.py  asr_vocabulary.py  audio.py  aux_features.py  conversation_drivers.py  driver_enrichment.py  eval_models.py  extraction.py  html_export.py  ingestion.py  llm_drivers.py  meeting_health.py  model_bus.py  obsidian_writer.py  owner.py  pdf_export.py  pipeline.py  reflections.py  review.py  scheduler.py  search.py  speaker_identity.py  speaker_learning.py  synthesis.py  transcript_editor.py  transcript_quality.py  transcript_render.py  vault_lint.py
backend/app/services/diarization/: base.py  embedding_provider.py  factory.py  foxnose_provider.py  pyannote_provider.py  wespeaker_embedding_provider.py
backend/app/services/eval/: runner.py
backend/app/services/repair/: __init__.py  identity_resolver.py  llm_identity.py  overlap_inference.py  quality_hints.py  segment_splitter.py  speaker_reattributer.py  vocab_corrector.py
backend/app/services/transcription/: base.py  factory.py  faster_whisper_provider.py  mlx_whisper_provider.py
backend/tests/: smoke_pii.py  test_asr_candidates.py  test_audio_mime.py  test_cli_installer.py  test_cli_lifecycle.py  test_config_and_ingestion.py  test_conversation_drivers.py  test_cors_middleware.py  test_env_injection.py  test_eval_models.py  test_eval_runner.py  test_identity_resolver.py  test_ingest_race.py  test_llm_drivers.py  test_llm_json_parser.py  test_meeting_health.py  test_obsidian_writer.py  test_overlap_inference.py  test_pipeline.py  test_pipeline_lite.py  test_probe_duration_resilience.py  test_quality_fixtures.py  test_quality_hints.py  test_reflections.py  test_rename_person.py  test_restart_sweep.py  test_routes_meeting_detail.py  test_sample_company_fixture.py  test_scheduler.py  test_search.py  test_security_helpers.py  test_segment_splitter.py  test_speaker_identity_handoffs.py  test_speaker_learning.py  test_speaker_name_stoplist.py  test_speaker_reattributer.py  test_stage_b_voice_match.py  test_stage_c_llm_identity.py  test_tier_evidence_gate.py  test_vocab_corrector.py  (+1 more)
backend/tests/eval/: README.md  harness.py  scoring.py  test_eval_drivers.py
backend/tests/eval/fixtures/: decision_heavy_meeting.py  dominated_strategy_meeting.py  pivot_question_meeting.py  sample_company_q3_roadmap.py
backend/tests/fixtures/: transcript_quality_cases.json
docs/: CONFIGURATION.md  SECURITY.md
docs/adr/: 0001-local-first-v0.md
docs/design/: meeting-output-improvements.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: screenshots.mjs
frontend/src/: api.ts  audio.ts  format.ts  main.tsx  observatory.tsx  speakerColors.tsx  styles.css  types.ts
frontend/src/components/: ConfirmModal.tsx  ConversationDriversPanel.tsx  ForYouSection.tsx  MeetingHealthChips.tsx  ReflectionsPanel.tsx  SegmentExtras.tsx  TranscriptRow.tsx  Waveform.tsx  highlight.tsx
scripts/: check_pii.py
scripts/ab/: run_ab.py
tests/eval/: .gitignore  README.md
